# Last-Dance

스마트 스토어/1688_소싱에이전트_한국어/: .env.example  .gitattributes  .mcp.json  pyproject.toml
스마트 스토어/1688_소싱에이전트_한국어/.agents/plugins/: marketplace.json
스마트 스토어/1688_소싱에이전트_한국어/plugins/sourcing-agent-1688/: README.md
스마트 스토어/1688_소싱에이전트_한국어/src/sourcing1688/: auth.py  browser_profile.py  chrome_setup.py  cli.py  codex_install.py  config.py  mcp_server.py  models.py  storage.py  utils.py
스마트 스토어/1688_소싱에이전트_한국어/src/sourcing1688/assets/: downloader.py  manifest.py
스마트 스토어/1688_소싱에이전트_한국어/src/sourcing1688/parsers/: __init__.py  asset_extractor.py  rendered_html.py  search_results.py
스마트 스토어/1688_소싱에이전트_한국어/src/sourcing1688/providers/: api_provider.py  auto_provider.py  browser_provider.py  local_html_provider.py
스마트 스토어/1688_소싱에이전트_한국어/src/sourcing1688/reports/: csv_export.py  markdown.py
스마트 스토어/1688_소싱에이전트_한국어/tests/: test_asset_manifest.py  test_chrome_search_reviews.py  test_home_auth_distribution.py  test_keyword_expander.py  test_network_payload_parser.py  test_rendered_html_parser.py
스마트 스토어/1688_소싱에이전트_한국어/tests/fixtures/: api_detail_response.json  api_keyword_response.json  image_search_sample.json  product_detail_sample.json  ranking_sample.json
스킬모음/: 00_영상AI_안내.md
통합앱_prototype/: AWS배포가이드.md  Dockerfile  app.py  app.py.bak_AB  app.py.bak_commerce  app.py.bak_concurrent  app.py.bak_cro  app.py.bak_design  app.py.bak_model  app.py.bak_thumb  app.py.bak_titleedit  app.py.bak_video  requirements.txt  usage_log.jsonl  앱_새로실행.bat  이어서작업_인수인계.md
(+516 files in other folders)
